@@ -43,6 +43,12 @@ namespace Mono.Cecil.Metadata {
 
 		public static readonly MetadataToken Zero = new MetadataToken ((TokenType) 0, 0);
 
+		public MetadataToken (int token)
+		{
+			m_type = (TokenType) (token & 0xff000000);
+			m_rid = (uint) token & 0x00ffffff;
+		}
+
 		public MetadataToken (TokenType table, uint rid)
 		{
 			m_type = table;
@@ -52,11 +58,6 @@ namespace Mono.Cecil.Metadata {
 		internal static MetadataToken FromMetadataRow (TokenType table, int rowIndex)
 		{
 			return new MetadataToken (table, (uint) rowIndex + 1);
-		}
-
-		public static MetadataToken FromToken (int token)
-		{
-			return new MetadataToken ((TokenType) (token & 0xff000000), (uint) token & 0x00ffffff);
 		}
 
 		public uint ToUInt ()
